{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 2342,
  "lineage": "246dbdf1-e2db-a12d-c0d8-1046f37c3510",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-08f9564894d706d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "id": "subnet-08f9564894d706d1e",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "state": "available",
            "tags": {
              "Name": "prisub 0"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_subnet.prisub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-00218406ba007e1ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "id": "subnet-00218406ba007e1ac",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "state": "available",
            "tags": {
              "Name": "prisub 1"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_subnet.prisub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-081be36b311c22ff1",
            "public_dns": "ec2-52-207-136-25.compute-1.amazonaws.com",
            "public_ip": "52.207.136.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d8c84f7cff8d8da0",
            "public_dns": "ec2-3-225-26-208.compute-1.amazonaws.com",
            "public_ip": "3.225.26.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:555478048938:instance/i-0ad68c187033adb1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ad68c187033adb1a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "monitoring": false,
            "primary_network_interface_id": "eni-059be298a22a9a664",
            "private_dns": "ip-10-0-10-72.ec2.internal",
            "private_ip": "10.0.10.72",
            "public_dns": "ec2-18-213-247-203.compute-1.amazonaws.com",
            "public_ip": "18.213.247.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d56c3360b73d0db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f9564894d706d1e",
            "tags": {
              "Name": "DB 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b7061edb5d49104"
            ]
          },
          "depends_on": [
            "aws_key_pair.servers",
            "aws_security_group.nat",
            "data.aws_availability_zones.available",
            "data.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:555478048938:instance/i-081a7a7332ce0be8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-081a7a7332ce0be8b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "monitoring": false,
            "primary_network_interface_id": "eni-056b6fe117f4ec1b7",
            "private_dns": "ip-10-0-11-22.ec2.internal",
            "private_ip": "10.0.11.22",
            "public_dns": "ec2-3-83-205-140.compute-1.amazonaws.com",
            "public_ip": "3.83.205.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dd52638edec21214",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00218406ba007e1ac",
            "tags": {
              "Name": "DB 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b7061edb5d49104"
            ]
          },
          "depends_on": [
            "aws_key_pair.servers",
            "aws_security_group.nat",
            "data.aws_availability_zones.available",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:555478048938:instance/i-09d25518de6215011",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09d25518de6215011",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "monitoring": false,
            "primary_network_interface_id": "eni-058ec8aaa74b273f5",
            "private_dns": "ip-10-0-2-199.ec2.internal",
            "private_ip": "10.0.2.199",
            "public_dns": "ec2-18-213-115-214.compute-1.amazonaws.com",
            "public_ip": "18.213.115.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04a574b97a823bfff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d93ed7325e239604",
            "tags": {
              "Name": "ngnix 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c735061eb24c3e8"
            ]
          },
          "depends_on": [
            "aws_key_pair.servers",
            "aws_security_group.nginx",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024582e76075564db",
            "arn": "arn:aws:ec2:us-east-1:555478048938:instance/i-06f162f58f923a4cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06f162f58f923a4cf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "monitoring": false,
            "primary_network_interface_id": "eni-04af85a91eac67840",
            "private_dns": "ip-10-0-3-101.ec2.internal",
            "private_ip": "10.0.3.101",
            "public_dns": "ec2-34-205-72-152.compute-1.amazonaws.com",
            "public_ip": "34.205.72.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06a59edd34a23dca7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb306209728ad3fc",
            "tags": {
              "Name": "ngnix 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c735061eb24c3e8"
            ]
          },
          "depends_on": [
            "aws_key_pair.servers",
            "aws_security_group.nginx",
            "aws_subnet.pubsub",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ac84e2364946677d",
            "owner_id": "555478048938",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081be36b311c22ff1",
            "id": "nat-01966103428f054a4",
            "network_interface_id": "eni-01290cce3ce1e323d",
            "private_ip": "10.0.2.142",
            "public_ip": "52.207.136.25",
            "subnet_id": "subnet-0d93ed7325e239604",
            "tags": {
              "Name": "NATGW 0"
            }
          },
          "depends_on": [
            "aws_eip.nateip",
            "aws_internet_gateway.IGW",
            "aws_subnet.pubsub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8c84f7cff8d8da0",
            "id": "nat-0ef5394379be81011",
            "network_interface_id": "eni-01d3960ab24cd81e0",
            "private_ip": "10.0.3.12",
            "public_ip": "3.225.26.208",
            "subnet_id": "subnet-0eb306209728ad3fc",
            "tags": {
              "Name": "NATGW 1"
            }
          },
          "depends_on": [
            "aws_eip.nateip",
            "aws_internet_gateway.IGW",
            "aws_subnet.pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0131d119747f06d9a",
            "owner_id": "555478048938",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-01966103428f054a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.homework2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4897d7e05402150",
            "owner_id": "555478048938",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ef5394379be81011",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.homework2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c333dd4a653e1dd9",
            "owner_id": "555478048938",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac84e2364946677d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.homework2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f36ea53f91241c12",
            "owner_id": "555478048938",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac84e2364946677d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.homework2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d84c4006d64a46",
            "route_table_id": "rtb-0131d119747f06d9a",
            "subnet_id": "subnet-08f9564894d706d1e"
          },
          "depends_on": [
            "aws_route_table.priroute",
            "aws_subnet.prisub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029737290f8b32659",
            "route_table_id": "rtb-0f4897d7e05402150",
            "subnet_id": "subnet-00218406ba007e1ac"
          },
          "depends_on": [
            "aws_route_table.priroute",
            "aws_subnet.prisub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b984b7d0bb59775",
            "route_table_id": "rtb-0c333dd4a653e1dd9",
            "subnet_id": "subnet-0d93ed7325e239604"
          },
          "depends_on": [
            "aws_route_table.pubroute",
            "aws_subnet.pubsub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac772e0d443d9872",
            "route_table_id": "rtb-0f36ea53f91241c12",
            "subnet_id": "subnet-0eb306209728ad3fc"
          },
          "depends_on": [
            "aws_route_table.pubroute",
            "aws_subnet.pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:security-group/sg-04b7061edb5d49104",
            "description": "Allow nat traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b7061edb5d49104",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nat",
            "name_prefix": null,
            "owner_id": "555478048938",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:security-group/sg-04c735061eb24c3e8",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c735061eb24c3e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx",
            "name_prefix": null,
            "owner_id": "555478048938",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-08f9564894d706d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-08f9564894d706d1e",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "tags": {
              "Name": "prisub 0"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-00218406ba007e1ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-00218406ba007e1ac",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "tags": {
              "Name": "prisub 1"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-0d93ed7325e239604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d93ed7325e239604",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "tags": {
              "Name": "pubsub 0"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:subnet/subnet-0eb306209728ad3fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0eb306209728ad3fc",
            "map_public_ip_on_launch": true,
            "owner_id": "555478048938",
            "tags": {
              "Name": "pubsub 1"
            },
            "vpc_id": "vpc-05e8cb9daca9e2147"
          },
          "depends_on": [
            "aws_vpc.homework2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homework2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555478048938:vpc/vpc-05e8cb9daca9e2147",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7306129561bccb1",
            "default_route_table_id": "rtb-0ab8e254e2c9bbd99",
            "default_security_group_id": "sg-029c85b7e08a32562",
            "dhcp_options_id": "dopt-611dee1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05e8cb9daca9e2147",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab8e254e2c9bbd99",
            "owner_id": "555478048938",
            "tags": {
              "Name": "homework2"
            }
          }
        }
      ]
    }
  ]
}